# BsPacthDemo

./: settings.gradle
app/: CMakeLists.txt  build.gradle
app/release/: app-release.apk
app/src/androidTest/java/com/xuesong/bspacthdemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: bspatch.c  native-lib.h
app/src/main/java/com/xuesong/bspacthdemo/: ApkUtils.java  Contants.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/main/res/xml/: provider_paths.xml
app/src/test/java/com/xuesong/bspacthdemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
